traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^Snake:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:32: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:37: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:37: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:44: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:47: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else return false
                ^Snake:47: warning: enclosing method positionFinale has result type Unit: return value discarded
    else return false
         ^