traversal.snake.Snake.scala.code
override def run() 
{
  baisseBrosse()
  var dir:Direction = getDirection()
  
  while(!positionFinale())
  {
    avancer()
  }
  
  def avancer() {
    if(estFaceMur())
    {
      if(dir == Direction.EAST)
      {
        gauche()
        avance()
        gauche()
      }
      else if(dir == Direction.WEST)
      {
        droite()
        avance()
        droite()
      }
    }
    else avance()
  }
  
  def positionFinale(){
    if(estFaceMur())
    	return true
    else if(dir == Direction.EAST)
    {
      gauche()
      if(estFaceMur())
    		return true
      droite()
    }
    else if(dir == Direction.WEST)
    {
      droite()
      if(estFaceMur())
    		return true
      gauche()
    }
    else return false
  }
}